--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,17 +14,19 @@ jobs:
             -   uses: actions/checkout@v2
             -   name: Install clever-tools
                 run: npm install -g clever-tools
-            -   uses: lhotari/action-upterm@v1
             -   name: Deploy
                 run: |
                     mkdir -p ~/deployment
                     rm -rf .git
                     cp .clever.json ~/deployment/
-                    tar cvzf ~/deployment/artifact.tgz ${{ env.CLEVER_DIR }}
+                    cp -r clevercloud  ~/deployment/
+                    cd ${{ env.CLEVER_DIR }} && tar cvzf ~/deployment/artifact.tgz ./
                     cd ~/deployment
+                    git config --global user.email "madamebiz@monsieurbiz.com"
+                    git config --global user.name "Madame Biz"
                     git init
                     git add -A
                     git commit -m "Deploy ${{ env.GITHUB_SHA }}"
                     clever login --token ${{ env.CLEVER_TOKEN}} --secret ${{ env.CLEVER_SECRET }}
-                    
+                    clever deploy --force
                     
