--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,12 +4,19 @@ on:
         branches:
             - master
 
+env:
+    CLEVER_URL: ${{ secrets.CLEVER_URL }}
+    CLEVER_TOKEN: ${{ secrets.CLEVER_TOKEN }}
+    CLEVER_SECRET: ${{ secrets.CLEVER_SECRET }}
+    CLEVER_DIR: ${{ secrets.CLEVER_DIR }}
+    GH_SHA: ${{ env.GITHUB_SHA }}
+
 jobs:
     deployment:
         runs-on: ubuntu-latest
         environment:
             name: test
-            url: ${{ secrets.CLEVER_URL }}
+            url: $CLEVER_URL
         steps:
             -   uses: actions/checkout@v2
             -   name: Install clever-tools
@@ -20,13 +27,13 @@ jobs:
                     rm -rf .git
                     cp .clever.json ~/deployment/
                     cp -r clevercloud  ~/deployment/
-                    cd ${{ secrets.CLEVER_DIR }} && tar cvzf ~/deployment/artifact.tgz ./
+                    cd $CLEVER_DIR && tar cvzf ~/deployment/artifact.tgz ./
                     cd ~/deployment
                     git config --global user.email "madamebiz@monsieurbiz.com"
                     git config --global user.name "Madame Biz"
                     git init
                     git add -A
-                    git commit -m "Deploy ${{ env.GITHUB_SHA }}"
-                    clever login --token ${{ secrets.CLEVER_TOKEN}} --secret ${{ secrets.CLEVER_SECRET }}
+                    git commit -m "Deploy $GH_SHA"
+                    clever login --token $CLEVER_TOKEN --secret $CLEVER_SECRET
                     clever deploy --force
                     
